# Bazel-React-Monorepo-Example

./: .bazelignore  .gitignore  BUILD  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
